[package]
name = "puzzle_solution_argument"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
digest = "0.10.7"
ecdsa = "0.16.8"
elliptic-curve = "0.13.5"
ethers-core = "2.0.8"
ethers-signers = "2.0.8"
k256 = "0.13.1"
rand = "0.8.5"
signature = "2.1.0"
tokio = { version = "1.32.0", features = ["test-util", "macros"] }

[dev-dependencies]
ark-bn254 = "0.4.0"
sha2 = "0.10.7"
